fix : popup getting scrollbar absolute-> fixed

--- a/css/tflib.popups.css
+++ b/css/tflib.popups.css
@@ -3,7 +3,7 @@
 
 /* Modal Popup css start*/
 .tf-modal-outer {
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     right: 0px;
